--- a/pykd/packages.config
+++ b/pykd/packages.config
@@ -11,6 +11,7 @@
   <package id="Python35" version="3.5.1.1" targetFramework="Native" />
   <package id="Python36" version="3.6.0" targetFramework="Native" />
   <package id="Python37" version="1.0.0.1" targetFramework="Native" />
+  <package id="Python38" version="3.8.0" targetFramework="Native" />
   <package id="clang-cmake" version="6.0.0.1" targetFramework="Native" />
   <package id="llvm-cmake" version="6.0.0.1" targetFramework="Native" />
 </packages>
